fixing input box spacing and rpund trip logic

--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -455,6 +455,7 @@ input,
 select,
 textarea {
   margin-bottom: 1.5rem;
+  margin-right: 1.8rem;
 }
 blockquote,
 dl,
